--- a/src/app/app-shell/app-shell.component.css
+++ b/src/app/app-shell/app-shell.component.css
@@ -14,7 +14,7 @@
 ----------------------------------------------------- */
 
 main {
-    width: 100%;
+    width: calc(100% - 80px);
     padding: 20px;
     transition: all 0.3s;
 }
